--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'HE'
 - !lcsh 'Northwest, Old -- History -- 1775-1865'
 - !lcsh 'Clark, George Rogers, 1752-1818'
+- GITenberg
 title: Military Roads of the Mississippi Basin
 url: http://www.gutenberg.org/ebooks/41167
